<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/playlist_cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="15dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/guardian" />

            <TextView
                android:id="@+id/section_name_text_view"
                style="@style/DateAndSectionNameStyle"
                android:layout_alignStart="@id/imageView"
                android:text="@string/sample_section_name" />

            <TextView
                android:id="@+id/date_text_view"
                style="@style/DateAndSectionNameStyle"
                android:layout_alignEnd="@id/imageView"
                android:text="@string/sample_date" />
        </RelativeLayout>

        <TextView
            android:id="@+id/headline_article_text_view"
            style="@style/HeadLineStyle"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/sample_headline" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/author_text_view"
                style="@style/AuthorStyle"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/sample_author" />


            <TextView
                android:id="@+id/time_text_view"
                style="@style/TimeStyle"
                android:layout_gravity="bottom"
                android:gravity="end"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/sample_time" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
